@@ -1,3 +1,9 @@
+2002-03-30  Richard Henderson  <rth@redhat.com>
+
+	PR c++/3719
+	* libsupc++/eh_personality.cc (__cxa_call_unexpected): Copy handler
+	data out of the exception struct before calling unexpectedHandler.
+
 2002-03-27  Roger Sayle  <roger@eyesopen.com>
 
 	* include/c_std/std_cmath.h:  To prevent problems overloading
